--- a/Ayurveda/index.html
+++ b/Ayurveda/index.html
@@ -16,7 +16,7 @@
         <div class="name">Ayurveda</div>
         <nav class="tab">
             <ul>
-                <li><a href="PS1_Project.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About_Us.html">About</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="loginform.html">Login</a></li>
